--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,26 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: rgb(23, 6, 53);
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: white;
 }
 
-.App-table {
-  margin-top: 10px;
+.App-column {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-width: 50%;
+  margin-left: 30px;
   line-height: 1.3;
+}
 
-  column-width: 50px;
+.App-table {
+  table-layout: fixed;
+  text-align: center;
 }
